--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.43", features = ["derive"] }
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.9.5"
