feat: add more palettes for testing

--- a/palettes.toml
+++ b/palettes.toml
@@ -38,3 +38,204 @@ blue = "#0066cc"
 cyan = "#00cccc"
 green = "#00cc66"
 
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+ 
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
+[[palette]]
+name = "Another Palette"
+[palette.colors]
+base03 = "#112233"
+base02 = "#445566"
+base01 = "#778899"
+base00 = "#aabbcc"
+base0 = "#ddeeff"
+base1 = "#001122"
+base2 = "#334455"
+base3 = "#667788"
+yellow = "#ffcc00"
+orange = "#ff6600"
+red = "#cc0000"
+magenta = "#cc00cc"
+violet = "#6600cc"
+blue = "#0066cc"
+cyan = "#00cccc"
+green = "#00cc66"
+
