test: update palette file for easier testing

--- a/palettes.toml
+++ b/palettes.toml
@@ -19,168 +19,28 @@ cyan = "#2aa198"
 green = "#859900"
 
 [[palette]]
-name = "Another Palette"
+name = "sol"
 [palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
- 
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
+base03 = "#001419"
+base02 = "#002b36"
+base01 = "#586e75"
+base00 = "#657b83"
+base0 = "#839496"
+base1 = "#93a1a1"
+base2 = "#eee8d5"
+base3 = "#fdf6e3"
+yellow = "#b58900"
+orange = "#cb4b16"
+red = "#dc322f"
+magenta = "#d33682"
+violet = "#6c71c4"
+blue = "#268bd2"
+cyan = "#2aa198"
+green = "#859900"
 
 
 [[palette]]
-name = "Another Palette"
+name = "test"
 [palette.colors]
 base03 = "#112233"
 base02 = "#445566"
@@ -198,44 +58,3 @@ violet = "#6600cc"
 blue = "#0066cc"
 cyan = "#00cccc"
 green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
-[[palette]]
-name = "Another Palette"
-[palette.colors]
-base03 = "#112233"
-base02 = "#445566"
-base01 = "#778899"
-base00 = "#aabbcc"
-base0 = "#ddeeff"
-base1 = "#001122"
-base2 = "#334455"
-base3 = "#667788"
-yellow = "#ffcc00"
-orange = "#ff6600"
-red = "#cc0000"
-magenta = "#cc00cc"
-violet = "#6600cc"
-blue = "#0066cc"
-cyan = "#00cccc"
-green = "#00cc66"
-
